# leaf

./: Cargo.toml  README.md  hkt-custom-proof.md  partial-application-solution-theory.lm  planning.md
lumina/: Cargo.toml
lumina-compiler/: Cargo.toml
lumina-compiler/src/: callstack.rs  collector.rs  lib.rs  linkedstore.rs
lumina-compiler/src/checker.old/: error.rs  mod.rs  patterns.rs  type_check.rs
lumina-compiler/src/combiner/: mod.rs  run.rs  type.rs
lumina-compiler/src/hir/: function.rs  mod.rs
lumina-compiler/src/mir/: mod.rs
lumina-compiler/src/verifier/: error.rs  impl.rs  mod.rs  settings.rs  trait.rs
lumina-compiler/src/verifier/function/: mod.rs  type_check.rs
lumina-compiler/src/verifier/function/entity/: local.rs  mod.rs
lumina-compiler/src/verifier/type/: enum.rs  mod.rs  struct.rs
lumina-env/: Cargo.toml
lumina-env/src/: flags.rs  lib.rs  output.rs
lumina-parser/: Cargo.toml
lumina-parser/src/: attribute.rs  error.rs  lib.rs  type.rs
lumina-parser/src/ast/: bounds.rs  construct.rs  function.rs  mod.rs
lumina-parser/src/ast/entity/: first.rs  if.rs  mod.rs  patterns.rs
lumina-parser/src/ast/walker/: attr.rs  enum.rs  expr.rs  function.rs  impl.rs  mod.rs  pattern.rs  struct.rs  trait.rs  type.rs  use.rs
lumina-patterns/: Cargo.toml
lumina-patterns/src/: lib.rs  pattern.rs
lumina-tokenizer/: Cargo.toml
lumina-tokenizer/src/: file.rs  lib.rs  token.rs
lumina-typesystem/: Cargo.toml
lumina-typesystem/src/: error.rs  genbuffer.rs  lib.rs
lumina-typesystem/src/impls/: blanked.rs  direct.rs  mod.rs  specialization.rs  tests.rs
lumina-util/: Cargo.toml
lumina-util/src/: annotation.rs  builtin.rs  error.rs  ignored.rs  lib.rs  location.rs  macros.rs  pflags.rs  tracked.rs  type.rs  typing.rs
lumina/src/: main.rs
luminastd/modules/ext/some_module/: hello.lm
luminastd/modules/ext/some_module/innerhello/: inner.lm
luminastd/modules/std/: list.lm  rc.lm
luminastd/prelude/: closure.lm  exports.lm
luminastd/prelude/hidden/: functor.lf  option.lf  result.lf  show.lf
