[package]
name = "lumina-parser"
version = "0.1.0"
authors = ["Simon <simon.larsson-general@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina-tokenizer = { path = "../lumina-tokenizer/" }
lumina-util = { path = "../lumina-util/" }
lumina-env = { path = "../lumina-env/" }
lumina-patterns = { path = "../lumina-patterns" }
itertools = "*"
colored = "*"
take_mut = "*"
