[package]
name = "lumina-util"
version = "0.1.0"
authors = ["Simon <simon.larsson-general@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
lumina-env = { path = "../lumina-env/" }
itertools = "*"
smallvec = "*"
